; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_usimple_lock_try_lock_loop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_usimple_lock_try_lock_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usimple_lock_try_lock_loop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @ml_get_interrupts_enabled()
  store i32 %4, i32* %3, align 4
  br label %5

5:                                                ; preds = %15, %1
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @simple_lock_try(i32 %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br i1 %9, label %10, label %17

10:                                               ; preds = %5
  %11 = load i32, i32* %3, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %10
  %14 = call i32 (...) @handle_pending_TLB_flushes()
  br label %15

15:                                               ; preds = %13, %10
  %16 = call i32 (...) @cpu_pause()
  br label %5

17:                                               ; preds = %5
  ret void
}

declare dso_local i32 @ml_get_interrupts_enabled(...) #1

declare dso_local i32 @simple_lock_try(i32) #1

declare dso_local i32 @handle_pending_TLB_flushes(...) #1

declare dso_local i32 @cpu_pause(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
